infra/argocd/argocd-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  parentRefs:
    - name: homelab-gateway
      namespace: default
  hostnames:
  - "argocd.home.williamlhunter.com"
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
      - name: argocd-server
        port: 80
